<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.profile.ProfileFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/dimen_152"
        android:layout_height="@dimen/dimen_152"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_19"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/avatar_placeholder" />

    <TextView
        android:id="@+id/nickname"
        style="@style/HeaderOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginStart="@dimen/dimen_16"
        android:background="@null"
        android:text="@string/nickname"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login_out"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_35"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:background="@drawable/shape_button"
        android:text="@string/log_out"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/nickname">

        <TextView
            android:id="@+id/location"
            style="@style/HeaderTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/location" />

        <TextView
            android:id="@+id/company"
            style="@style/HeaderTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/company" />

        <TextView
            android:id="@+id/followers"
            style="@style/HeaderTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/followers" />

        <TextView
            android:id="@+id/following"
            style="@style/HeaderTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/following" />

        <TextView
            android:id="@+id/number_public_repositories"
            style="@style/HeaderTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/number_public_repositories" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        style="@style/ViewLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_marginTop="@dimen/dimen_30"
        app:layout_constraintTop_toBottomOf="@id/avatar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_repository"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_12"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text_placeholder"
        style="@style/HeaderOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/server_response_status"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_repository" />

</androidx.constraintlayout.widget.ConstraintLayout>