<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.oauth.OauthItemFragment">

    <TextView
        android:id="@+id/nickname"
        style="@style/HeaderOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/nickname" />

    <TextView
        style="@style/HeaderTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_50"
        android:text="@string/list_of_repositories" />

    <Button
        android:id="@+id/button_login_out"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_43"
        android:background="@drawable/shape_button"
        android:layout_gravity="top|end"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:textSize="@dimen/text_14"
        style="@style/Button"
        android:text="@string/login_out" />

    <View
        android:id="@+id/view"
        style="@style/ViewLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_marginTop="@dimen/dimen_78"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_repository"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_79"
        android:layout_marginHorizontal="@dimen/dimen_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/text_placeholder"
        android:visibility="gone"
        style="@style/HeaderOne"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_response_status" />

</FrameLayout>