<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="@dimen/dimen_8"
    android:padding="@dimen/dimen_16"
    android:background="@drawable/shape_repos_item_list"
    android:id="@+id/list_item_repos">

    <TextView
        android:id="@+id/repository_name"
        style="@style/RepositoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="4"
        android:background="@null"
        android:text="@string/repository_name"
        android:layout_marginEnd="@dimen/dimen_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/repository_language"/>

    <TextView
        android:id="@+id/repository_language"
        style="@style/RepositoryDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/repository_name"
        android:layout_gravity="end|top"
        android:layout_marginTop="@dimen/dimen_4"
        android:gravity="end"
        android:background="@null"
        android:text="@string/language" />

    <TextView
        android:id="@+id/repository_metadata"
        style="@style/RepositoryMetadata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/repository_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@null"
        android:text="@string/repository_metadata" />

    <TextView
        android:id="@+id/repository_description"
        style="@style/RepositoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/repository_metadata"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@null"
        android:text="@string/repository_description" />

</androidx.constraintlayout.widget.ConstraintLayout>