<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimen_16"
    android:background="@drawable/shape_search_item_list"
    android:id="@+id/list_item_search">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/dimen_70"
        android:layout_height="@dimen/dimen_70"
        android:layout_margin="@dimen/dimen_16"
        android:background="@null"
        tools:srcCompat="@drawable/avatar_placeholder" />

    <TextView
        android:id="@+id/nickname"
        style="@style/Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_102"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@null"
        android:text="@string/nickname" />

    <TextView
        android:id="@+id/subscribers"
        style="@style/Subscribers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_102"
        android:layout_marginTop="@dimen/dimen_43"
        android:background="@null"
        android:text="@string/_100_subscribers" />

    <TextView
        android:id="@+id/location"
        style="@style/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_102"
        android:layout_marginTop="@dimen/dimen_61"
        android:background="@null"
        android:text="@string/location" />

</FrameLayout>